--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -1,7 +1,9 @@
 {
   "home_hero": {
-    "heading": "Create Your Website Today with",
-    "description": "The ZONE is built on top of MUI, a powerful library that provides flexible, customizable, and easy-to-use components.",
-    "button": "figma workspace"
+    "description": "Notes, notes, lessons, rules and exceptions taken from different courses and programs",
+    "button": "Get Started",
+    "learn": "Learn and ",
+    "arabic": "Arabic language",
+    "light": "Practice"
   }
 }
